--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tallin Page</title>
 </head>
-<body>
-    <img src="../assets/header-bg.jpg" alt="Tallin">
+<body class="page">
+    <section class="banner"></section>
+    <section class="description">
+        <div class="description__info">
+            <h3 class="title description__title">Walking in Old Tallinn</h3>
+            <p class="text description__text">Welcome to Old Tallinn, the heart of the Estonian capital!
+            The history of the settlement once began from here, and today it is one of the best preserved medieval cities in Europe.</p>
+            <p class="text description__text">I will take you through the streets and doorways and show you where they traded, what they ate, what they sued about and what our Estonian ancestors aspired to.</p>
+            <p class="text description__text">You will visit the oldest pharmacy, get acquainted with the royal privileges, see firsthand a real "gingerbread" house, look into an old tavern, walk along the widest and longest streets of the city and even find out that Tallinn is a lame city!</p>
+            <p class="text description__text">And you will also find beautiful and interesting souvenirs, of course!</p>
+        </div>
+        <button class="button">Feedback</button>
+        
+    </section>
+    <!-- <img src="../assets/header-bg.jpg" alt="Tallin"> -->
 </body>
 </html>
