Add section gallery

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="page">
     <section class="banner"></section>
+
     <section class="description">
         <div class="description__info">
             <h3 class="title description__title">Walking in Old Tallinn</h3>
@@ -18,7 +19,28 @@
             <p class="text description__text">And you will also find beautiful and interesting souvenirs, of course!</p>
         </div>
         <button class="button">Feedback</button>
-        
+    </section>
+
+    <section class="gallery">
+        <div class="gallery__images">
+            <img src="../assets/photo_1.jpg" alt="towers" class="gallery__photo">
+            <img src="../assets/photo_2.jpg" alt="roofs" class="gallery__photo">
+            <img src="../assets/photo_3.jpg" alt="houses" class="gallery__photo">
+            <img src="../assets/photo_4.jpg" alt="memorial" class="gallery__photo">
+            <img src="../assets/photo_5.jpg" alt="houses" class="gallery__photo">
+        </div>
+        <div class="arrows gallery__arrows">
+            <div class="arrows__arrow arrows__arrow_dir_left arrows__arrow_inactive">
+                <svg class="icon">
+                    <use xlink:href="../assets/sprite.svg#arrow"></use>
+                </svg>
+            </div>
+            <div class="arrows__arrow arrows__arrow_right">
+                <svg class="icon">
+                    <use xlink:href="../assets/sprite.svg#arrow"></use>
+                </svg>
+            </div>
+        </div>
     </section>
     <!-- <img src="../assets/header-bg.jpg" alt="Tallin"> -->
 </body>
