Create tours section

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,27 @@
             </div>
         </div>
     </section>
+
+    <section class="tours">
+        <h3 class="title tours__title">Other tours</h3>
+        <div class="tours__container">
+            <a class="tour" href="#">
+                <img src="../assets/tour_1.jpg" alt="Isaac's Cathedral" class="tour__image">
+                <h4 class="tour__title">St. Isaac's Cathedral in St. Petersburg</h4>
+                <p class="tour__description">One of the highest domed structures in the world.</p>
+            </a>
+            <a class="tour" href="#">
+                <img src="../assets/tour_2.jpg" alt="Bridge of Peace" class="tour__image">
+                <h4 class="tour__title">The Bridge of Peace, Tbilisi</h4>
+                <p class="tour__description">Arc-shaped pedestrian bridge made of glass and steel</p>
+            </a>
+            <a class="tour" href="#">
+                <img src="../assets/tour_3.jpg" alt="El Caminito del Ray" class="tour__image">
+                <h4 class="tour__title">El Caminito del Rey, Argentina</h4>
+                <p class="tour__description">Tango, Open-air Museum, Painting, Art and History</p>
+            </a>
+        </div>
+    </section>
     <!-- <img src="../assets/header-bg.jpg" alt="Tallin"> -->
 </body>
 </html>
