Add gallery scroll

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
       <img src="../assets/photo_3.jpg" alt="houses" class="gallery__photo">
       <img src="../assets/photo_4.jpg" alt="memorial" class="gallery__photo">
       <img src="../assets/photo_5.jpg" alt="houses" class="gallery__photo">
+      <img src="../assets/photo_1.jpg" alt="towers" class="gallery__photo">
+      <img src="../assets/photo_2.jpg" alt="roofs" class="gallery__photo">
+      <img src="../assets/photo_3.jpg" alt="houses" class="gallery__photo">
+      <img src="../assets/photo_4.jpg" alt="memorial" class="gallery__photo">
+      <img src="../assets/photo_5.jpg" alt="houses" class="gallery__photo">
     </div>
     <div class="arrows gallery__arrows">
       <div class="arrows__arrow arrows__arrow_dir_left arrows__arrow_inactive">
@@ -41,7 +46,7 @@
           <use xlink:href="../assets/sprite.svg#arrow"></use>
         </svg>
       </div>
-      <div class="arrows__arrow arrows__arrow_right">
+      <div class="arrows__arrow arrows__arrow_dir_right">
         <svg class="icon">
           <use xlink:href="../assets/sprite.svg#arrow"></use>
         </svg>
