Add adaptive styles

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
           <label class="form__label form__label_type_check" for="confirmation">Даю согласие на обработку</label>
         </div>
   
-        <button class="form__button button button_active" type="submit" value="submit">Send</button>        
+        <button class="form__button button button_active button_type_submit" type="submit" value="submit">Send</button>        
       </div>
 
     </form>
